REST API: expose project category commands
Fixes #32470
